# pallas

examples/n2c-miniprotocols/src/: localtxsubmission.rs  main.rs
pallas-addresses/: Cargo.toml
pallas-addresses/src/: byron.rs  lib.rs  varuint.rs
pallas-applying/: Cargo.toml
pallas-applying/src/: alonzo.rs  babbage.rs  byron.rs  lib.rs  shelley_ma.rs  utils.rs
pallas-codec/: Cargo.toml
pallas-codec/src/: utils.rs
pallas-codec/src/flat/decode/: decoder.rs  mod.rs
pallas-codec/src/flat/encode/: mod.rs
pallas-crypto/: Cargo.toml
pallas-crypto/src/: lib.rs  memsec.rs
pallas-crypto/src/key/: ed25519.rs
pallas-network/src/miniprotocols/localstate/queries_v16/: codec.rs  mod.rs
pallas-network/src/miniprotocols/localtxsubmission/: codec.rs  protocol.rs
pallas-network/src/miniprotocols/localtxsubmission/docs/: conway_errors.md
pallas-network/tests/: protocols.rs
pallas-primitives/: Cargo.toml
pallas-primitives/src/: lib.rs  plutus_data.rs
pallas-primitives/src/alonzo/: model.rs
pallas-primitives/src/babbage/: model.rs
pallas-primitives/src/conway/: model.rs
pallas-traverse/: Cargo.toml
pallas-traverse/src/: auxiliary.rs  header.rs  input.rs  lib.rs  output.rs  redeemers.rs  tx.rs  update.rs  value.rs  witnesses.rs
pallas-validate/src/: utils.rs
