[package]
name = "pallas-codec"
description = "Pallas common CBOR encoding interface and utilities"
version = "0.31.0"
edition = "2021"
repository = "https://github.com/txpipe/pallas"
homepage = "https://github.com/txpipe/pallas"
documentation = "https://docs.rs/pallas-codec"
license = "Apache-2.0"
readme = "README.md"
authors = [
  "Santiago Carmuega <santiago@carmuega.me>",
  "Lucas Rosa <x@rvcas.dev>",
  "Kasey White <kwhitemsg@gmail.com>",
]

[features]
default = []

[dependencies]
hex = { version="0.4.3", default-features = false }
# "std" can't be here. We don't know about "half"
minicbor = { version = "0.25.1", features = ["alloc", "derive"] }
num-bigint = { version = "0.4.4", optional = true }
# PARA METER EN TUXEDO-CORE:
# serde = { version = "1.0.143", features = ["derive"] }
serde = { version = "1.0.143", features = ["derive"], default_features = false }
# thiserror = "1.0.39"
thiserror-no-std = "2.0.2"

[dev-dependencies]
proptest = "1.1.0"
