[package]
name = "pallas-crypto"
description = "Cryptographic primitives for Cardano"
version = "0.31.0"
edition = "2021"
repository = "https://github.com/txpipe/pallas"
homepage = "https://github.com/txpipe/pallas"
documentation = "https://docs.rs/pallas-crypto"
license = "Apache-2.0"
readme = "README.md"
authors = ["Nicolas Di Prima <nicolas@primetype.co.uk>", "Andrew Westberg <andrewwestberg@gmail.com>"]

[dependencies]
hex = { version="0.4.3", default-features = false }
cryptoxide = { version = "0.4.4" }
thiserror-no-std = "2.0.2"
rand_core = "0.6"
pallas-codec = { version = "=0.31.0", path = "../pallas-codec" }
serde = { version = "1.0.143", default-features = false }
zeroize = "1.8.1"

[dev-dependencies]
itertools = "0.13"
quickcheck = "1.0"
quickcheck_macros = "1.0"
rand = "0.8"
serde_test = "1.0.143"
